--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "firebase": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
